--- a/atomic-mass-unit-to-kilogram.html
+++ b/atomic-mass-unit-to-kilogram.html
@@ -1,10 +1,11 @@
-
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
 	<title>Convert Atomic Mass Unit to Kilogram</title>
-	<meta name="description" content="Instant free online tool for Atomic mass unit to kilogram conversion or vice versa. The Atomic mass unit [u] to kilogram [kg] conversion table and conversion steps are also listed. Also, explore tools to convert Atomic mass unit or kilogram to other weight and mass units or learn more about weight and mass conversions." />
+	<meta name="description"
+		content="Instant free online tool for Atomic mass unit to kilogram conversion or vice versa. The Atomic mass unit [u] to kilogram [kg] conversion table and conversion steps are also listed. Also, explore tools to convert Atomic mass unit or kilogram to other weight and mass units or learn more about weight and mass conversions." />
 	<link rel="stylesheet" href="//d15gdne58bo42a.cloudfront.net/style-n.css" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<script src="//d15gdne58bo42a.cloudfront.net/js/common.js" async></script>
@@ -13,66 +14,134 @@
 	<link rel="icon" type="image/png" sizes="16x16" href="//d15gdne58bo42a.cloudfront.net/icon-16x16.png">
 	<link rel="manifest" href="/manifest.json">
 </head>
+
 <body>
-<div id="headerout">
-	<div id="header">
-		<div id="logo"><a href="/"><img src="//d15gdne58bo42a.cloudfront.net/images/logo.svg" width="288" height="28" alt="UnitConverters.net"></a></div>
+
+	<div id="clear"></div>
+	<div id="contentout">
+		<div id="content">
+			
+			
+			<h1>Convert Atomic Mass Unit to Kilogram</h1>
+			<p>Please provide values below to convert Atomic mass unit [u] to kilogram [kg], or <a
+					href="kilogram-to-atomic-mass-unit.htm"><i>vice versa</i></a>.</p>
+			<div id="unquickcalc" style="display:none;"></div>
+			<form>
+				<div id="undctable">
+					<table align="center" cellpadding="5">
+						<tr>
+							<td class="bigtext uclabel" align="right"><label for="ucfrom">From:</label></td>
+							<td><input type="text" name="ucfrom" class="ucdcinput" id="ucfrom"
+									onKeyUp="ucDCUpdateResult(0);" autofocus></td>
+							<td class="bigtext"><label for="ucfrom"><b>Atomic mass unit</b></label></td>
+							<td rowspan="2"><a href="kilogram-to-atomic-mass-unit.htm"><img src="/images/switch.svg"
+										alt="switch" width="15" height="20"></a></td>
+						</tr>
+						<tr>
+							<td class="bigtext uclabel" align="right"><label for="ucto">To:</label></td>
+							<td><input type="text" name="ucto" class="ucdcinput" id="ucto"
+									onKeyUp="ucDCUpdateResult(1);"></td>
+							<td class="bigtext"><label for="ucto"><b>kilogram</b></label></td>
+						</tr>
+						<tr>
+							<td class="uclabel">&nbsp;</td>
+							<td align="center"><input type="hidden" name="ucfromunit" id="ucfromunit"
+									value="Atomic mass unit [u] [6.0221366516752E+41]"><input type="hidden"
+									name="uctounit" id="uctounit" value="kilogram [kg] [1.0E+15]"> <input type="submit"
+									value="Convert" class="ucdcsubmit"
+									onclick="ucDCUpdateResult(processingType);return false;"> &nbsp;
+								<input type="reset" value="Clear" class="ucdcsubmit">
+							</td>
+							<td colspan="2">&nbsp;</td>
+						</tr>
+					</table>
+					<div id="ucresult" class="ucresulttext"></div>
+				</div>
+			</form>
+			<script>noValidation = 0; var processingType = 0;</script><br><br>
+			<h3>Atomic Mass Unit to Kilogram Conversion Table</h3>
+			<table class="datatable">
+				<tr>
+					<th align="right">Atomic Mass Unit [u]</th>
+					<th>Kilogram [kg]</th>
+				</tr>
+				<tr>
+					<td align="right">0.01 u</td>
+					<td>1.6605402E-29 kg</td>
+				</tr>
+				<tr>
+					<td align="right">0.1 u</td>
+					<td>1.6605402E-28 kg</td>
+				</tr>
+				<tr>
+					<td align="right">1 u</td>
+					<td>1.6605402E-27 kg</td>
+				</tr>
+				<tr>
+					<td align="right">2 u</td>
+					<td>3.3210804E-27 kg</td>
+				</tr>
+				<tr>
+					<td align="right">3 u</td>
+					<td>4.9816206E-27 kg</td>
+				</tr>
+				<tr>
+					<td align="right">5 u</td>
+					<td>8.3027009999999E-27 kg</td>
+				</tr>
+				<tr>
+					<td align="right">10 u</td>
+					<td>1.6605402E-26 kg</td>
+				</tr>
+				<tr>
+					<td align="right">20 u</td>
+					<td>3.3210804E-26 kg</td>
+				</tr>
+				<tr>
+					<td align="right">50 u</td>
+					<td>8.3027009999999E-26 kg</td>
+				</tr>
+				<tr>
+					<td align="right">100 u</td>
+					<td>1.6605402E-25 kg</td>
+				</tr>
+				<tr>
+					<td align="right">1000 u</td>
+					<td>1.6605402E-24 kg</td>
+				</tr>
+			</table><br><br>
+			<h3>How to Convert Atomic Mass Unit to Kilogram</h3>
+			<p class="bigtext">1 u = 1.6605402E-27 kg<br>1 kg = 6.0221366516752E+26 u<br></p>
+			<p class="bigtext"><b>Example:</b> convert 15 u to kg:<br>15 u = 15 &times; 1.6605402E-27 kg = 2.4908103E-26
+				kg</p><br><br>
+			
+				
+		</div>
+		<div id="right">
+			<div id="rightAdUnit" style="text-align:center;">
+				<div style="min-height:280px; text-align:center;">
+					<script async src="/f.txt"></script>
+					<script>
+						window.googletag = window.googletag || { cmd: [] };
+						googletag.cmd.push(function () {
+							googletag.defineSlot('/1057446/UnitConverters-Top-Right-Desktop', [[336, 280], [300, 250]], 'div-gpt-ad-1589566514232-0').addService(googletag.pubads());
+							googletag.pubads().enableSingleRequest();
+							googletag.enableServices();
+						});
+					</script>
+					<!-- /1057446/UnitConverters-Top-Right-Desktop -->
+					<div id='div-gpt-ad-1589566514232-0'>
+						<script>
+							googletag.cmd.push(function () { googletag.display('div-gpt-ad-1589566514232-0'); });
+						</script>
+					</div>
+				</div>
+				<br>
+			</div><br>
+			
 	</div>
-</div>
-<div id="clear"></div>
-<div id="contentout">
-	<div id="content">
-					<img src="//d15gdne58bo42a.cloudfront.net/images/calculator.svg" width="22" height="31" align="right" border="0" onClick="quickCaclShow('');" alt="calculator">
-				<div class="topnav"><a href="/">Home</a> / <a href='/weight-and-mass-converter.html'>Weight and Mass Conversion</a> / Convert Atomic Mass Unit to Kilogram</div>
-		<h1>Convert Atomic Mass Unit to Kilogram</h1>
-<p>Please provide values below to convert Atomic mass unit [u] to kilogram [kg], or <a href="kilogram-to-atomic-mass-unit.htm"><i>vice versa</i></a>.</p><div id="unquickcalc" style="display:none;"></div>
-<form>
-<div id="undctable">
-<table align="center" cellpadding="5">
-	<tr>
-		<td class="bigtext uclabel" align="right"><label for="ucfrom">From:</label></td>		<td ><input type="text" name="ucfrom" class="ucdcinput" id="ucfrom" onKeyUp="ucDCUpdateResult(0);" autofocus></td>
-		<td class="bigtext" ><label for="ucfrom"><b>Atomic mass unit</b></label></td>
-		<td rowspan="2"><a href="kilogram-to-atomic-mass-unit.htm"><img src="/images/switch.svg" alt="switch" width="15" height="20"></a></td>
-	</tr>
-	<tr>
-		<td class="bigtext uclabel" align="right"><label for="ucto">To:</label></td>		<td ><input type="text" name="ucto" class="ucdcinput" id="ucto" onKeyUp="ucDCUpdateResult(1);"></td>
-		<td class="bigtext" ><label for="ucto"><b>kilogram</b></label></td>
-	</tr>
-	<tr>
-			<td class="uclabel">&nbsp;</td><td align="center"><input type="hidden" name="ucfromunit" id="ucfromunit" value="Atomic mass unit [u] [6.0221366516752E+41]"><input type="hidden" name="uctounit" id="uctounit" value="kilogram [kg] [1.0E+15]">			<input type="submit" value="Convert" class="ucdcsubmit" onclick="ucDCUpdateResult(processingType);return false;"> &nbsp;
-			<input type="reset" value="Clear" class="ucdcsubmit">
-		</td>
-		<td colspan="2">&nbsp;</td>	</tr>
-</table>
-<div id="ucresult" class="ucresulttext"></div>
-</div>
-</form>
-<script>noValidation=0;var processingType = 0;</script><br><br><h3>Atomic Mass Unit to Kilogram Conversion Table</h3><table class="datatable"><tr><th align="right">Atomic Mass Unit [u]</th><th>Kilogram [kg]</th></tr><tr><td align="right">0.01 u</td><td>1.6605402E-29 kg</td></tr><tr><td align="right">0.1 u</td><td>1.6605402E-28 kg</td></tr><tr><td align="right">1 u</td><td>1.6605402E-27 kg</td></tr><tr><td align="right">2 u</td><td>3.3210804E-27 kg</td></tr><tr><td align="right">3 u</td><td>4.9816206E-27 kg</td></tr><tr><td align="right">5 u</td><td>8.3027009999999E-27 kg</td></tr><tr><td align="right">10 u</td><td>1.6605402E-26 kg</td></tr><tr><td align="right">20 u</td><td>3.3210804E-26 kg</td></tr><tr><td align="right">50 u</td><td>8.3027009999999E-26 kg</td></tr><tr><td align="right">100 u</td><td>1.6605402E-25 kg</td></tr><tr><td align="right">1000 u</td><td>1.6605402E-24 kg</td></tr></table><br><br><h3>How to Convert Atomic Mass Unit to Kilogram</h3><p class="bigtext">1 u = 1.6605402E-27 kg<br>1 kg = 6.0221366516752E+26 u<br></p><p class="bigtext"><b>Example:</b> convert 15 u to kg:<br>15 u = 15 &times; 1.6605402E-27 kg = 2.4908103E-26 kg</p><br><br><h3>Popular Weight And Mass Unit Conversions</h3><div id="toother"><div><a href="/weight-and-mass/kg-to-lbs.htm">kg to lbs</a></div><div><a href="/weight-and-mass/lbs-to-kg.htm">lbs to kg</a></div><div><a href="/weight-and-mass/grams-to-ounces.htm">grams to ounces</a></div><div><a href="/weight-and-mass/ounces-to-grams.htm">ounces to grams</a></div><div><a href="/weight-and-mass/pounds-to-ounces.htm">pounds to ounces</a></div><div><a href="/weight-and-mass/ounces-to-pounds.htm">ounces to pounds</a></div><div><a href="/weight-and-mass/grams-to-pounds.htm">grams to pounds</a></div><div><a href="/weight-and-mass/pounds-to-grams.htm">pounds to grams</a></div><div><a href="/weight-and-mass/g-to-kg.htm">g to kg</a></div><div><a href="/weight-and-mass/kg-to-g.htm">kg to g</a></div><div><a href="/weight-and-mass/grams-to-milligrams.htm">grams to milligrams</a></div><div><a href="/weight-and-mass/milligrams-to-grams.htm">milligrams to grams</a></div><div><a href="/weight-and-mass/oz-to-kg.htm">oz to kg</a></div><div><a href="/weight-and-mass/kg-to-oz.htm">kg to oz</a></div><div><a href="/weight-and-mass/lbs-to-stone.htm">lbs to stone</a></div><div><a href="/weight-and-mass/stone-to-lbs.htm">stone to lbs</a></div><div><a href="/weight-and-mass/ton-to-lbs.htm">ton to lbs</a></div><div><a href="/weight-and-mass/lbs-to-ton.htm">lbs to ton</a></div></div><br><h3>Convert Atomic Mass Unit to Other Weight and Mass Units</h3><div id="toother"><div><a href="atomic-mass-unit-to-gram.htm">Atomic Mass Unit to Gram</a></div><div><a href="atomic-mass-unit-to-milligram.htm">Atomic Mass Unit to Milligram</a></div><div><a href="atomic-mass-unit-to-ton-metric.htm">Atomic Mass Unit to Ton (metric)</a></div><div><a href="atomic-mass-unit-to-pound.htm">Atomic Mass Unit to Pound</a></div><div><a href="atomic-mass-unit-to-ounce.htm">Atomic Mass Unit to Ounce</a></div><div><a href="atomic-mass-unit-to-carat.htm">Atomic Mass Unit to Carat</a></div><div><a href="atomic-mass-unit-to-ton-short.htm">Atomic Mass Unit to Ton (short)</a></div><div><a href="atomic-mass-unit-to-ton-long.htm">Atomic Mass Unit to Ton (long)</a></div><div><a href="atomic-mass-unit-to-break.htm">Atomic Mass Unit to Break</a></div><div><a href="atomic-mass-unit-to-exagram.htm">Atomic Mass Unit to Exagram</a></div><div><a href="atomic-mass-unit-to-petagram.htm">Atomic Mass Unit to Petagram</a></div><div><a href="atomic-mass-unit-to-teragram.htm">Atomic Mass Unit to Teragram</a></div><div><a href="atomic-mass-unit-to-gigagram.htm">Atomic Mass Unit to Gigagram</a></div><div><a href="atomic-mass-unit-to-megagram.htm">Atomic Mass Unit to Megagram</a></div><div><a href="atomic-mass-unit-to-hectogram.htm">Atomic Mass Unit to Hectogram</a></div><div><a href="atomic-mass-unit-to-dekagram.htm">Atomic Mass Unit to Dekagram</a></div><div><a href="atomic-mass-unit-to-decigram.htm">Atomic Mass Unit to Decigram</a></div><div><a href="atomic-mass-unit-to-centigram.htm">Atomic Mass Unit to Centigram</a></div><div><a href="atomic-mass-unit-to-microgram.htm">Atomic Mass Unit to Microgram</a></div><div><a href="atomic-mass-unit-to-nanogram.htm">Atomic Mass Unit to Nanogram</a></div><div><a href="atomic-mass-unit-to-picogram.htm">Atomic Mass Unit to Picogram</a></div><div><a href="atomic-mass-unit-to-femtogram.htm">Atomic Mass Unit to Femtogram</a></div><div><a href="atomic-mass-unit-to-attogram.htm">Atomic Mass Unit to Attogram</a></div><div><a href="atomic-mass-unit-to-dalton.htm">Atomic Mass Unit to Dalton</a></div><div><a href="atomic-mass-unit-to-kilogram-force-square-second-meter.htm">Atomic Mass Unit to Kilogram-force Square Second/meter</a></div><div><a href="atomic-mass-unit-to-kilopound.htm">Atomic Mass Unit to Kilopound</a></div><div><a href="atomic-mass-unit-to-kip.htm">Atomic Mass Unit to Kip</a></div><div><a href="atomic-mass-unit-to-slug.htm">Atomic Mass Unit to Slug</a></div><div><a href="atomic-mass-unit-to-pound-force-square-second-foot.htm">Atomic Mass Unit to Pound-force Square Second/foot</a></div><div><a href="atomic-mass-unit-to-pound-troy-or-apothecary.htm">Atomic Mass Unit to Pound (troy Or Apothecary)</a></div><div><a href="atomic-mass-unit-to-poundal.htm">Atomic Mass Unit to Poundal</a></div><div><a href="atomic-mass-unit-to-ton-assay-us.htm">Atomic Mass Unit to Ton (assay) (US)</a></div><div><a href="atomic-mass-unit-to-ton-assay-uk.htm">Atomic Mass Unit to Ton (assay) (UK)</a></div><div><a href="atomic-mass-unit-to-kiloton-metric.htm">Atomic Mass Unit to Kiloton (metric)</a></div><div><a href="atomic-mass-unit-to-quintal-metric.htm">Atomic Mass Unit to Quintal (metric)</a></div><div><a href="atomic-mass-unit-to-hundredweight-us.htm">Atomic Mass Unit to Hundredweight (US)</a></div><div><a href="atomic-mass-unit-to-hundredweight-uk.htm">Atomic Mass Unit to Hundredweight (UK)</a></div><div><a href="atomic-mass-unit-to-quarter-us.htm">Atomic Mass Unit to Quarter (US)</a></div><div><a href="atomic-mass-unit-to-quarter-uk.htm">Atomic Mass Unit to Quarter (UK)</a></div><div><a href="atomic-mass-unit-to-stone-us.htm">Atomic Mass Unit to Stone (US)</a></div><div><a href="atomic-mass-unit-to-stone-uk.htm">Atomic Mass Unit to Stone (UK)</a></div><div><a href="atomic-mass-unit-to-tonne.htm">Atomic Mass Unit to Tonne</a></div><div><a href="atomic-mass-unit-to-pennyweight.htm">Atomic Mass Unit to Pennyweight</a></div><div><a href="atomic-mass-unit-to-scruple-apothecary.htm">Atomic Mass Unit to Scruple (apothecary)</a></div><div><a href="atomic-mass-unit-to-grain.htm">Atomic Mass Unit to Grain</a></div><div><a href="atomic-mass-unit-to-gamma.htm">Atomic Mass Unit to Gamma</a></div><div><a href="atomic-mass-unit-to-talent-biblical-hebrew.htm">Atomic Mass Unit to Talent (Biblical Hebrew)</a></div><div><a href="atomic-mass-unit-to-mina-biblical-hebrew.htm">Atomic Mass Unit to Mina (Biblical Hebrew)</a></div><div><a href="atomic-mass-unit-to-shekel-biblical-hebrew.htm">Atomic Mass Unit to Shekel (Biblical Hebrew)</a></div><div><a href="atomic-mass-unit-to-bekan-biblical-hebrew.htm">Atomic Mass Unit to Bekan (Biblical Hebrew)</a></div><div><a href="atomic-mass-unit-to-gerah-biblical-hebrew.htm">Atomic Mass Unit to Gerah (Biblical Hebrew)</a></div><div><a href="atomic-mass-unit-to-talent-biblical-greek.htm">Atomic Mass Unit to Talent (Biblical Greek)</a></div><div><a href="atomic-mass-unit-to-mina-biblical-greek.htm">Atomic Mass Unit to Mina (Biblical Greek)</a></div><div><a href="atomic-mass-unit-to-tetradrachma-biblical-greek.htm">Atomic Mass Unit to Tetradrachma (Biblical Greek)</a></div><div><a href="atomic-mass-unit-to-didrachma-biblical-greek.htm">Atomic Mass Unit to Didrachma (Biblical Greek)</a></div><div><a href="atomic-mass-unit-to-drachma-biblical-greek.htm">Atomic Mass Unit to Drachma (Biblical Greek)</a></div><div><a href="atomic-mass-unit-to-denarius-biblical-roman.htm">Atomic Mass Unit to Denarius (Biblical Roman)</a></div><div><a href="atomic-mass-unit-to-assarion-biblical-roman.htm">Atomic Mass Unit to Assarion (Biblical Roman)</a></div><div><a href="atomic-mass-unit-to-quadrans-biblical-roman.htm">Atomic Mass Unit to Quadrans (Biblical Roman)</a></div><div><a href="atomic-mass-unit-to-lepton-biblical-roman.htm">Atomic Mass Unit to Lepton (Biblical Roman)</a></div><div><a href="atomic-mass-unit-to-planck-mass.htm">Atomic Mass Unit to Planck Mass</a></div><div><a href="atomic-mass-unit-to-electron-mass-rest.htm">Atomic Mass Unit to Electron Mass (rest)</a></div><div><a href="atomic-mass-unit-to-muon-mass.htm">Atomic Mass Unit to Muon Mass</a></div><div><a href="atomic-mass-unit-to-proton-mass.htm">Atomic Mass Unit to Proton Mass</a></div><div><a href="atomic-mass-unit-to-neutron-mass.htm">Atomic Mass Unit to Neutron Mass</a></div><div><a href="atomic-mass-unit-to-deuteron-mass.htm">Atomic Mass Unit to Deuteron Mass</a></div><div><a href="atomic-mass-unit-to-earth-s-mass.htm">Atomic Mass Unit to Earth's Mass</a></div><div><a href="atomic-mass-unit-to-sun-s-mass.htm">Atomic Mass Unit to Sun's Mass</a></div></div>	</div>
-	<div id="right">
-		<div id="rightAdUnit" style="text-align:center;"><div style="min-height:280px; text-align:center;">
-<script async src="/f.txt"></script>
-<script>
-  window.googletag = window.googletag || {cmd: []};
-  googletag.cmd.push(function() {
-	googletag.defineSlot('/1057446/UnitConverters-Top-Right-Desktop', [[336, 280], [300, 250]], 'div-gpt-ad-1589566514232-0').addService(googletag.pubads());
-	googletag.pubads().enableSingleRequest();
-	googletag.enableServices();
-  });
-</script>
-<!-- /1057446/UnitConverters-Top-Right-Desktop -->
-<div id='div-gpt-ad-1589566514232-0'>
-  <script>
-    googletag.cmd.push(function() { googletag.display('div-gpt-ad-1589566514232-0'); });
-  </script>
-</div>
-</div>
-<br></div><br><div id="othercalc"></div><script>var navSectionName = "Common Converters";</script>	</div>
-</div>
-<div id="clear"></div>
-<div id="footer">
-	<div id="footerin">
-		<div id="footernav"><a href="/about-us.php">about us</a> | <a href="/about-us.php#terms">terms of use</a> | <a href="/about-us.php#privacy">privacy policy</a> | <a href="/sitemap.php">sitemap</a> &nbsp; &copy; 2008 - 2025 <a href="https://www.unitconverters.net">unitconverters.net</a></div>
-	</div>
-</div>
+	<div id="clear"></div>
+	
 </body>
+
 </html>
